--- a/theme/static/css/app.css
+++ b/theme/static/css/app.css
@@ -104,11 +104,9 @@ ol {
 }
 
 pre {
-  color: #777;
-  border: 1px solid #cfcfcf;
-  background: #fbfbfb;
+  background: #f6f6f6;
   padding: 0.5rem;
-  border-radius: 0.25rem;
+  border-radius: 0.5rem;
   overflow-x: auto;
 }
 
