chore: change font to Work Sans

--- a/theme/static/css/app.css
+++ b/theme/static/css/app.css
@@ -22,7 +22,7 @@
   --container-w: 650px;
   --font-size-sm: 0.875rem;
   --font-mono: Iosevka Mono, monospace;
-  --font-primary: 'IBM Plex Serif', serif;
+  --font-primary: 'Work Sans', serif;
 }
 
 body {
