style: change primary color

--- a/theme/static/css/app.css
+++ b/theme/static/css/app.css
@@ -17,7 +17,7 @@
 }
 
 :root {
-  --c-primary: #fe5819;
+  --c-primary: #e41359;
   --c-gray: #888;
   --container-w: 650px;
   --font-size-sm: 0.875rem;
