--- a/theme/static/css/app.css
+++ b/theme/static/css/app.css
@@ -21,6 +21,18 @@
   --bg-footer: #1f1f1f;
   --c-body: #fafafa;
   --c-gray: #bababa;
+  --highlight-color: #fff;
+  --highlight-bg: #1c1b1b;
+  --highlight-comment: #999;
+  --highlight-keyword: #88aece;
+  --highlight-attribute: #88aece;
+  --highlight-symbol: #c59bc1;
+  --highlight-namespace: #f08d49;
+  --highlight-variable: #b5bd68;
+  --highlight-literal: #f08d49;
+  --highlight-punctuation: #ccc;
+  --highlight-deletion: #de7176;
+  --highlight-addition: #76c490;
 }
 
 :root[data-theme="light"] {
@@ -28,6 +40,18 @@
   --bg-footer: #f4f4f4;
   --c-body: #151515;
   --c-gray: #888;
+  --highlight-color: #2f3337;
+  --highlight-bg: #f6f6f6;
+  --highlight-comment: #656e77;
+  --highlight-keyword: #015692;
+  --highlight-attribute: #015692;
+  --highlight-symbol: #803378;
+  --highlight-namespace: #b75501;
+  --highlight-variable: #54790d;
+  --highlight-literal: #b75501;
+  --highlight-punctuation: #535a60;
+  --highlight-deletion: #c02d2e;
+  --highlight-addition: #2f6f44;
 }
 
 @media (prefers-color-scheme: dark) {
@@ -36,6 +60,18 @@
     --bg-footer: #1f1f1f;
     --c-body: #fafafa;
     --c-gray: #bababa;
+    --highlight-color: #fff;
+    --highlight-bg: #1c1b1b;
+    --highlight-comment: #999;
+    --highlight-keyword: #88aece;
+    --highlight-attribute: #88aece;
+    --highlight-symbol: #c59bc1;
+    --highlight-namespace: #f08d49;
+    --highlight-variable: #b5bd68;
+    --highlight-literal: #f08d49;
+    --highlight-punctuation: #ccc;
+    --highlight-deletion: #de7176;
+    --highlight-addition: #76c490;
   }
 }
 
@@ -45,6 +81,18 @@
     --bg-footer: #f4f4f4;
     --c-body: #151515;
     --c-gray: #888;
+    --highlight-color: #2f3337;
+    --highlight-bg: #f6f6f6;
+    --highlight-comment: #656e77;
+    --highlight-keyword: #015692;
+    --highlight-attribute: #015692;
+    --highlight-symbol: #803378;
+    --highlight-namespace: #b75501;
+    --highlight-variable: #54790d;
+    --highlight-literal: #b75501;
+    --highlight-punctuation: #535a60;
+    --highlight-deletion: #c02d2e;
+    --highlight-addition: #2f6f44;
   }
 }
 
@@ -197,34 +245,26 @@ pre {
   padding: .5rem;
   margin-bottom: 1rem;
   overflow-x: auto;
-  background: #f6f6f6;
+  background: var(--highlight-bg);
   border-radius: .5rem;
 }
 
 p > code,
 li > code {
   font-weight: 500;
-  color: #777;
+  color: var(--highlight-color);
+  background-color: var(--highlight-bg);
 }
 
 blockquote {
-  position: relative;
-  padding: .25rem 1rem .25rem 1.5rem;
-  margin: 0;
-  background: #f6f6f6;
-  border: 1px solid #c1c1c1;
-  border-radius: .25rem;
+  padding: 0 2rem;
+  margin-bottom: 1rem;
+  font-size: 1rem;
+  font-style: italic;
 }
 
-blockquote::before {
-  position: absolute;
-  top: 4px;
-  bottom: 4px;
-  left: 3px;
-  width: 4px;
-  content: "";
-  background: var(--c-primary);
-  border-radius: 50px;
+blockquote p {
+  margin: 0;
 }
 
 .logo {
