--- a/theme/static/css/app.css
+++ b/theme/static/css/app.css
@@ -33,6 +33,8 @@
   --highlight-punctuation: #ccc;
   --highlight-deletion: #de7176;
   --highlight-addition: #76c490;
+  --theme-switcher-bg: #2c2c2c;
+  --theme-switcher-border-color: #454545;
 }
 
 :root[data-theme="light"] {
@@ -52,6 +54,8 @@
   --highlight-punctuation: #535a60;
   --highlight-deletion: #c02d2e;
   --highlight-addition: #2f6f44;
+  --theme-switcher-bg: #f3f3f3;
+  --theme-switcher-border-color: #b9b9b9;
 }
 
 @media (prefers-color-scheme: dark) {
@@ -72,6 +76,8 @@
     --highlight-punctuation: #ccc;
     --highlight-deletion: #de7176;
     --highlight-addition: #76c490;
+    --theme-switcher-bg: #2c2c2c;
+    --theme-switcher-border-color: #454545;
   }
 }
 
@@ -93,6 +99,8 @@
     --highlight-punctuation: #535a60;
     --highlight-deletion: #c02d2e;
     --highlight-addition: #2f6f44;
+    --theme-switcher-bg: #f3f3f3;
+    --theme-switcher-border-color: #b9b9b9;
   }
 }
 
@@ -338,6 +346,27 @@ blockquote p {
 /** Theme Switcher **/
 .theme-switcher {
   font-size: .875rem;
+}
+
+.theme-switcher label {
+  display: flex;
+  align-items: center;
+  padding: .25rem .5rem;
+  background: var(--theme-switcher-bg);
+  border: 1px solid var(--theme-switcher-border-color);
+  border-radius: .25rem;
+}
+
+.theme-switcher svg {
+  width: 18px;
+  margin-right: .5rem;
+}
+
+.theme-switcher select {
+  color: var(--c-body);
+  background: none;
+  border: none;
+  appearance: none;
 }
 
 @media all and (min-width: 768px) {
