--- a/theme/static/css/app.css
+++ b/theme/static/css/app.css
@@ -33,8 +33,8 @@
   --highlight-punctuation: #ccc;
   --highlight-deletion: #de7176;
   --highlight-addition: #76c490;
-  --theme-switcher-bg: #2c2c2c;
-  --theme-switcher-border-color: #454545;
+  --theme-switch-bg: #2c2c2c;
+  --theme-switch-border-color: #454545;
 }
 
 :root[data-theme="light"] {
@@ -54,54 +54,8 @@
   --highlight-punctuation: #535a60;
   --highlight-deletion: #c02d2e;
   --highlight-addition: #2f6f44;
-  --theme-switcher-bg: #f3f3f3;
-  --theme-switcher-border-color: #b9b9b9;
-}
-
-@media (prefers-color-scheme: dark) {
-  :root:not([data-theme="dark"], [data-theme="light"]) {
-    --bg: #151515;
-    --bg-footer: #1f1f1f;
-    --c-body: #fafafa;
-    --c-gray: #bababa;
-    --highlight-color: #fff;
-    --highlight-bg: #1c1b1b;
-    --highlight-comment: #999;
-    --highlight-keyword: #88aece;
-    --highlight-attribute: #88aece;
-    --highlight-symbol: #c59bc1;
-    --highlight-namespace: #f08d49;
-    --highlight-variable: #b5bd68;
-    --highlight-literal: #f08d49;
-    --highlight-punctuation: #ccc;
-    --highlight-deletion: #de7176;
-    --highlight-addition: #76c490;
-    --theme-switcher-bg: #2c2c2c;
-    --theme-switcher-border-color: #454545;
-  }
-}
-
-@media (prefers-color-scheme: light) {
-  :root:not([data-theme="dark"], [data-theme="light"]) {
-    --bg: #fff;
-    --bg-footer: #f4f4f4;
-    --c-body: #151515;
-    --c-gray: #888;
-    --highlight-color: #2f3337;
-    --highlight-bg: #f6f6f6;
-    --highlight-comment: #656e77;
-    --highlight-keyword: #015692;
-    --highlight-attribute: #015692;
-    --highlight-symbol: #803378;
-    --highlight-namespace: #b75501;
-    --highlight-variable: #54790d;
-    --highlight-literal: #b75501;
-    --highlight-punctuation: #535a60;
-    --highlight-deletion: #c02d2e;
-    --highlight-addition: #2f6f44;
-    --theme-switcher-bg: #f3f3f3;
-    --theme-switcher-border-color: #b9b9b9;
-  }
+  --theme-switch-bg: #f3f3f3;
+  --theme-switch-border-color: #b9b9b9;
 }
 
 body {
@@ -199,7 +153,10 @@ body {
 .site-header {
   margin-bottom: 2rem;
   background-color: var(--bg-footer);
-  padding: 0.25rem 1rem;
+  padding: 0.5rem 1rem;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
 }
 
 .site-header a {
@@ -370,29 +327,52 @@ blockquote p {
 }
 
 /** Theme Switcher **/
-.theme-switcher {
-  font-size: .875rem;
+.theme-switch-button {
+  border: 1px solid var(--theme-switch-border-color);
+  background: var(--theme-switch-bg);
+  display: block;
+  width: 40px;
+  height: 22px;
+  border-radius: 11px;
+  position: relative;
+  cursor: pointer;
 }
 
-.theme-switcher label {
-  display: flex;
-  align-items: center;
-  padding: .25rem .5rem;
-  background: var(--theme-switcher-bg);
-  border: 1px solid var(--theme-switcher-border-color);
-  border-radius: .25rem;
+.theme-switch-button input {
+  display: none;
 }
 
-.theme-switcher svg {
+.theme-switch-button input:checked + .theme-switch-check {
+  transform: translateX(18px);
+}
+
+.theme-switch-check {
+  position: absolute;
+  top: 1px;
+  left: 1px;
   width: 18px;
-  margin-right: .5rem;
+  height: 18px;
+  background: #fff;
+  border: 1px solid var(--theme-switch-border-color);
+  border-radius: 50%;
+  transition: background-color .25s,transform .25s;
 }
 
-.theme-switcher select {
-  color: var(--c-body);
-  background: none;
-  border: none;
-  appearance: none;
+.theme-switch-icon svg {
+  position: absolute;
+  width: 12px;
+  height: 12px;
+  left: 2px;
+  top: 2px;
+  opacity: 1;
+}
+
+[data-theme="light"] .theme-switch-appearance-moon {
+  opacity: 0;
+}
+
+[data-theme="dark"] .theme-switch-appearance-sun {
+  opacity: 0;
 }
 
 @media all and (min-width: 768px) {
@@ -403,7 +383,6 @@ blockquote p {
 
   #hero {
     display: flex;
-    align-items: center;
     gap: 1.5rem;
     margin-bottom: 3rem;
   }
