style: change switch button bg

--- a/theme/static/css/app.css
+++ b/theme/static/css/app.css
@@ -54,7 +54,7 @@
   --highlight-punctuation: #535a60;
   --highlight-deletion: #c02d2e;
   --highlight-addition: #2f6f44;
-  --theme-switch-bg: #f3f3f3;
+  --theme-switch-bg: #e6e6e6;
   --theme-switch-border-color: #b9b9b9;
 }
 
