--- a/theme/static/css/app.css
+++ b/theme/static/css/app.css
@@ -73,7 +73,7 @@ body {
 
 /** Utilities **/
 .container {
-  width: 100vw;
+  width: 100%;
   padding-right: 1rem;
   padding-left: 1rem;
   margin: 0 auto;
@@ -95,8 +95,20 @@ body {
   font-family: var(--font-mono);
 }
 
+.font-semibold {
+  font-weight: 600;
+}
+
 .text-muted {
   color: var(--c-gray);
+}
+
+.text-center {
+  text-align: center;
+}
+
+.mb-0 {
+  margin-bottom: 0;
 }
 
 .mb-1 {
@@ -113,6 +125,10 @@ body {
 
 .mb-4 {
   margin-bottom: 1rem;
+}
+
+.mb-8 {
+  margin-bottom: 2rem;
 }
 
 .py-4 {
@@ -140,6 +156,64 @@ body {
 
 .items-center {
   align-items: center;
+}
+
+.animated {
+  transition: all .16s cubic-bezier(.32, 0, .16, 1);
+}
+
+.button {
+  display: inline-flex;
+  align-items: center;
+  padding: .75rem 1.5rem;
+  font-weight: 500;
+  color: #fff;
+  cursor: pointer;
+  background-color: var(--c-primary);
+  border-radius: 48px;
+}
+
+.button:hover {
+  text-decoration: none;
+  transform: scale(1.05);
+}
+
+.button .icon {
+  margin-right: .75rem;
+}
+
+.button::after {
+  display: none;
+}
+
+.stat-button {
+  display: inline-flex;
+  align-items: center;
+  padding: .75rem 1.5rem;
+  font-weight: 600;
+  color: var(--c-body);
+  border-radius: 48px;
+  border: 3px solid var(--c-gray);
+}
+
+.stat-button .icon {
+  width: 20px;
+  height: 20px;
+  margin-right: .5rem;
+}
+
+.stat-button.download .icon {
+  color: #1BC47D;
+}
+
+.stat-button.star .icon {
+  color: #fbbf24;
+  width: 24px;
+  height: 24px;
+}
+
+.section {
+  padding: 4rem 1rem;
 }
 
 /** End Utilities **/
@@ -405,4 +479,118 @@ blockquote p {
   .post-date {
     display: inline;
   }
+}
+
+/** Landing Page **/
+.preview {
+  max-width: 100%;
+  margin: 2rem auto;
+  border-radius: 16px;
+  box-shadow: 0px 4px 8px rgb(0 0 0 / 24%), 0px 24px 40px rgb(0 0 0 / 24%);
+  overflow: hidden;
+  font-size: 0;
+}
+
+@media all and (min-width: 768px) {
+  .preview {
+    border-radius: 40px;
+    max-width: 720px;
+  }
+}
+
+.preview .browser-bar {
+  background-color: var(--c-body);
+  height: 40px;
+  display: flex;
+  align-items: center;
+  padding: 0 1.5rem;
+}
+
+.preview .browser-bar span {
+  display: inline-block;
+  width: 12px;
+  height: 12px;
+  border-radius: 50px;
+  margin-right: 0.5rem;
+}
+
+.preview .browser-bar span:nth-child(1) {
+  background-color: #ff5f57;
+}
+
+.preview .browser-bar span:nth-child(2) {
+  background-color: #febc2e;
+}
+
+.preview .browser-bar span:nth-child(3) {
+  background-color: #28c840;
+}
+
+.preview img {
+  width: 100%;
+  height: auto;
+}
+
+#reviews {
+  background: var(--bg-footer);
+  margin-bottom: -2rem;
+}
+
+.reviews {
+  list-style: none;
+  display: grid;
+  row-gap: 1.5rem;
+  max-width: 960px;
+  margin: 0 auto 4rem auto;
+  padding: 0 1rem;
+}
+
+@media all and (min-width: 768px) {
+  .reviews {
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: 1fr 1fr;
+    column-gap: 1.5rem;
+  }
+}
+
+.reviews a::after,
+.reviews li::before {
+  display: none;
+}
+
+.reviews li {
+  vertical-align: middle;
+  background: #fff;
+  box-shadow: 0px 4px 8px rgb(0 0 0 / 4%);
+  border-radius: 40px;
+  text-align: left;
+  padding: 2rem;
+}
+
+.reviews a {
+  color: #151515;
+  text-decoration: none;
+}
+
+.reviews p {
+  font-size: 1.25rem;
+}
+
+.reviews .date {
+  margin-left: .5rem;
+  font-size: 1rem;
+  color: var(--c-gray);
+}
+
+.reviews .rating {
+  color: #fbbf24;
+}
+
+.pro {
+  color: #fff;
+  background-color: #fbbf24;
+  border-radius: 48px;
+  font-weight: 600;
+  padding: 0 0.75rem;
+  font-weight: normal;
 }
