--- a/theme/static/css/app.css
+++ b/theme/static/css/app.css
@@ -553,12 +553,12 @@ blockquote p {
   }
 }
 
-.reviews a::after,
-.reviews li::before {
+.review a::after,
+.review::before {
   display: none;
 }
 
-.reviews li {
+.review {
   vertical-align: middle;
   background: #fff;
   box-shadow: 0px 4px 8px rgb(0 0 0 / 4%);
@@ -567,22 +567,26 @@ blockquote p {
   padding: 2rem;
 }
 
-.reviews a {
+.review:hover {
+  transform: scale(1.05);
+}
+
+.review a {
   color: #151515;
   text-decoration: none;
 }
 
-.reviews p {
+.review p {
   font-size: 1.25rem;
 }
 
-.reviews .date {
+.review .date {
   margin-left: .5rem;
   font-size: 1rem;
   color: var(--c-gray);
 }
 
-.reviews .rating {
+.review .rating {
   color: #fbbf24;
 }
 
