--- a/theme/static/css/app.css
+++ b/theme/static/css/app.css
@@ -519,6 +519,7 @@ blockquote p {
   box-shadow: 0px 4px 8px rgb(0 0 0 / 24%), 0px 24px 40px rgb(0 0 0 / 24%);
   overflow: hidden;
   font-size: 0;
+  line-height: 0;
 }
 
 @media all and (min-width: 768px) {
