--- a/theme/static/css/app.css
+++ b/theme/static/css/app.css
@@ -642,6 +642,7 @@ blockquote p {
   flex-direction: column;
   align-items: center;
   justify-content: center;
+  gap: 1.25rem;
 }
 
 .loading-screen .icon {
