--- a/theme/static/css/app.css
+++ b/theme/static/css/app.css
@@ -245,10 +245,10 @@ body {
 }
 
 .site-header a {
-  font-family: var(--font-mono);
   font-size: 1rem;
   color: var(--c-body);
   text-decoration: none;
+  font-weight: 600;
 }
 
 .site-header a:hover {
