--- a/theme/static/css/app.css
+++ b/theme/static/css/app.css
@@ -256,8 +256,8 @@ body {
   margin-bottom: 2rem;
   position: sticky;
   top: 0;
-  --webkit-backdrop-filter: blur(8px);
-  backdrop-filter: blur(8px);
+  -webkit-backdrop-filter: blur(40px);
+  backdrop-filter: blur(40px);
   background: var(--bg-header);
   z-index: 99;
 }
