--- a/theme/static/css/app.css
+++ b/theme/static/css/app.css
@@ -9,9 +9,9 @@
 }
 
 :root {
-  --container-w: 650px;
+  --container-w: 750px;
   --font-size-sm: .875rem;
-  --font-mono: Menlo, Monaco, "Lucida Console", "Liberation Mono", "DejaVu Sans Mono", "Bitstream Vera Sans Mono", "Courier New", monospace, serif;
+  --font-mono: "Overpass Mono", monospace;
   --font-primary: "Manrope", sans-serif;
   --font-serif: "Literata", serif;
 }
@@ -364,15 +364,8 @@ pre {
   background: var(--highlight-bg);
   border-radius: .5rem;
   font-size: 1rem;
-  line-height: 1.5;
+  line-height: 1.3;
   border: 1px solid var(--code-block-border);
-}
-
-@media all and (min-width: 768px) {
-  pre {
-    margin-left: -2rem;
-    margin-right: -2rem;
-  }
 }
 
 p > code,
@@ -456,7 +449,7 @@ table th {
 }
 
 .post-list {
-  margin: 0;
+  margin: 2.5rem 0;
 }
 
 .post-item {
@@ -481,7 +474,7 @@ table th {
 
 .post-date {
   display: block;
-  margin-right: .75rem;
+  margin-right: 1rem;
   font-variant-numeric: tabular-nums slashed-zero;
   color: var(--c-gray);
 }
