chore: rename class hljs-focus to hljs-line

--- a/theme/static/css/app.css
+++ b/theme/static/css/app.css
@@ -808,12 +808,12 @@ table th {
 }
 
 /** Highlight js **/
-.hljs-focus {
+.hljs-line {
   display: block;
   counter-increment: line-code;
 }
 
-.hljs-focus:before {
+.hljs-line:before {
   display: inline-block;
   content: counter(line-code);
   width: 20px;
